--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,12 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+env:
+  USER: "${{ secrets.DOCKERNAME }}"
+  PASS: "${{ secrets.DOCKERPASS}}"
+  REGISTRY: "${{ secrets.DOCKERLINE }}"
+  NAMESPACE: "${{ secrets.DOCKERNS }}"
+
 
 jobs:
 
@@ -15,4 +21,9 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag $REGISTRY/$NAMESPACE/monerymanager:1.0.0
+
+    - name: push docker image
+      run: |
+        docker login -u $USER -p $PASS $REGISTER
+        docker push $REGISTRY/$NAMESPACE/monerymanager:1.0.0
