--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,5 +25,5 @@ jobs:
 
     - name: push docker image
       run: |
-        docker login -u $USER -p $PASS $REGISTER
+        docker login -u $USER -p $PASS $REGISTRY
         docker push $REGISTRY/$NAMESPACE/monerymanager:1.0.0
