--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,12 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-env:
-  USER: "${{ secrets.DOCKERNAME }}"
-  PASS: "${{ secrets.DOCKERPASS}}"
-  REGISTRY: "${{ secrets.DOCKERLINE }}"
-  NAMESPACE: "${{ secrets.DOCKERNS }}"
-
 
 jobs:
 
@@ -23,7 +17,15 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag $REGISTRY/$NAMESPACE/monerymanager:1.0.0
 
+
+
+    - name: Authenticate to registry ${{ env.REGISTRY }}
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.REGISTRY_USER }}
+        password: ${{ secrets.REGISTRY_TOKEN }}
+
     - name: push docker image
       run: |
-        docker login -u $USER -p $PASS $REGISTRY
-        docker push $REGISTRY/$NAMESPACE/monerymanager:1.0.0
+        docker push ${{ env.REGISTRY }}/monerymanager:1.0.0
