--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag $REGISTRY/$NAMESPACE/monerymanager:1.0.0
+      run: docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/monerymanager:1.0.0
 
 
 
