--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,17 +15,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/monerymanager:1.0.0
+      run: docker build . --file Dockerfile --tag ${{ secrets.REGISTRY }}/monerymanager:1.0.0
 
 
 
-    - name: Authenticate to registry ${{ env.REGISTRY }}
+    - name: Authenticate to registry ${{ secrets.REGISTRY }}
       uses: docker/login-action@v3
       with:
-        registry: ${{ env.REGISTRY }}
+        registry: ${{ secrets.REGISTRY }}
         username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_TOKEN }}
 
     - name: push docker image
       run: |
-        docker push ${{ env.REGISTRY }}/monerymanager:1.0.0
+        docker push ${{ secrets.REGISTRY }}/monerymanager:1.0.0
