--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  version: 1.0.1
+
 jobs:
 
   build:
@@ -15,7 +18,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ secrets.REGISTRY }}/monerymanager:1.0.0
+      run: docker build . --file Dockerfile --tag ${{ secrets.REGISTRY }}/monerymanager:${{ env.version }}
 
 
 
@@ -28,4 +31,4 @@ jobs:
 
     - name: push docker image
       run: |
-        docker push ${{ secrets.REGISTRY }}/monerymanager:1.0.0
+        docker push ${{ secrets.REGISTRY }}/monerymanager:${{ env.version }}
