--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   version: 1.0.2
-  REGISTRY: docker.io/kingofme
+  #REGISTRY: docker.io/kingofme
 
 jobs:
 
@@ -19,17 +19,17 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/monerymanager:${{ env.version }}
+      run: docker build . --file Dockerfile --tag kingofme/monerymanager:${{ env.version }}
 
 
 
-    - name: Authenticate to registry ${{ env.REGISTRY }}
+    - name: Authenticate to registry docker.io
       uses: docker/login-action@v3
       with:
-        registry: ${{ env.REGISTRY }}
+        #registry: ${{ env.REGISTRY }}
         username: ${{ secrets.REGISTRY_USER }}
         password: ${{ secrets.REGISTRY_TOKEN }}
 
     - name: push docker image
       run: |
-        docker push ${{ env.REGISTRY }}/monerymanager:${{ env.version }}
+        docker push kingofme/monerymanager:${{ env.version }}
